# cogs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/workflows/: ci.yml  release.yml
crates/cogs-ask/: Cargo.toml
crates/cogs-ask/src/: lib.rs  query.rs
crates/cogs-core/: Cargo.toml
crates/cogs-core/src/: config.rs  index.rs  lib.rs  note.rs  parse.rs  resolve.rs  scan.rs  textquery.rs
crates/cogs-graph/: Cargo.toml
crates/cogs-graph/src/: db.rs  embed.rs  lib.rs  schema.rs  sync.rs
crates/cogs-graph/tests/: okf_google_test.rs  okf_test.rs  sync_test.rs
crates/cogs-graph/tests/fixtures/okf-google-ga4/: ATTRIBUTION.md
crates/cogs-graph/tests/fixtures/okf-google-ga4/bundle/: index.md
crates/cogs-graph/tests/fixtures/okf-google-ga4/bundle/datasets/: ga4_obfuscated_sample_ecommerce.md  index.md
crates/cogs-graph/tests/fixtures/okf-google-ga4/bundle/references/: index.md
crates/cogs-graph/tests/fixtures/okf-google-ga4/bundle/references/joins/: events___ads_clickstats.md  index.md
crates/cogs-graph/tests/fixtures/okf-google-ga4/bundle/references/metrics/: avg_pageviews.md  day_count.md  event_count.md  index.md  new_user_count.md  user_count.md
crates/cogs-graph/tests/fixtures/okf-google-ga4/bundle/tables/: events_.md  index.md
crates/cogs-ingest/: Cargo.toml  build.rs
crates/cogs-ingest-core/: Cargo.toml
crates/cogs-ingest-core/src/: jsonrepair.rs  lib.rs  text.rs  validators.rs
crates/cogs-ingest/src/: distill.rs  fm_edit.rs  git.rs  lib.rs  pipeline.rs  prompts.rs  render.rs  retrieve.rs  text.rs  training.rs
crates/cogs-ingest/tests/: distill_test.rs  ingest_test.rs
crates/cogs-ingest/tests/common/: mod.rs
crates/cogs-llm/: Cargo.toml
crates/cogs-llm/src/: lib.rs  training.rs
crates/cogs-lsp/: Cargo.toml
crates/cogs-lsp/src/: diagnostics.rs  lib.rs  pos.rs
crates/cogs-runtime/: Cargo.toml
crates/cogs-runtime/src/: lib.rs
crates/cogs-server/: Cargo.toml
crates/cogs-server/src/: lib.rs
crates/cogs-wasm/: Cargo.toml  build.rs
crates/cogs-wasm/src/: engine.rs  lib.rs
crates/cogs-wasm/tests/: parity_test.rs
examples/: aoa-knowledge.cogs.toml  okf-google.cogs.toml  okf-nameless.cogs.toml  okf.cogs.toml
scripts/: lsp_smoke.py  mcp_smoke.py
scripts/askgen/: askgen.py
scripts/eval/: README.md  analyze.py  run-pass.sh  setup-vault.sh
scripts/finetune/: SPARK_RUNBOOK.md  merge_adapter.py  train_lora.py
src/: init_templates.rs  main.rs  mcp.rs  okf.rs  viz_window.rs
templates/karpathy/: AGENTS.md  cogs.toml  gitignore  raw-README.md  wiki-index.md  wiki-log.md  zed-settings.json
templates/okf/: README.md  cogs.toml  index.md  log.md
templates/okf/concepts/: example.md
tests/: okf_roundtrip.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/components/: DetailPanel.svelte  FilterRail.svelte
web/src/lib/: api.ts  viz.ts
zed-extension/: Cargo.toml  extension.toml  extension.wasm
zed-extension/src/: lib.rs
