[package]
name = "cogs-ask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Closed-domain multi-step retrieval and grounded answering over a cogs vault"

[dependencies]
cogs-core = { path = "../cogs-core" }
cogs-graph = { path = "../cogs-graph" }
cogs-llm = { path = "../cogs-llm" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
