[package]
name = "cogs-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pluggable chat/completion LLM providers (OpenAI-compatible + Anthropic)"

[dependencies]
cogs-core = { path = "../cogs-core" }
cogs-ingest-core = { path = "../cogs-ingest-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls", "json"] }
