[package]
name = "cogs-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Writer election, file watching, and incremental index orchestration"

[dependencies]
cogs-core = { path = "../cogs-core" }
cogs-graph = { path = "../cogs-graph" }
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
fd-lock = "4"
notify = "8"
notify-debouncer-full = "0.6"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
