[package]
name = "cogs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API + embedded graph-visualization web app"

[dependencies]
cogs-core = { path = "../cogs-core" }
cogs-graph = { path = "../cogs-graph" }
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
mime_guess = "2"
