[package]
name = "cogs-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser build of the cogs vault engine: parsing, link resolution, graph snapshot (wasm-bindgen)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cogs-core = { path = "../cogs-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
cogs-graph = { path = "../cogs-graph" }
tempfile = "3"
